# ESCAPE_FROM_FERENTAR

./: install.sh
client/: Cargo.toml  Dioxus.toml  README.md
client/.cargo/: config.toml
client/assets/: main.css
client/client2/: Cargo.toml  Dioxus.toml
client/src/: _const.rs  comp.rs  data_loader.rs  geometry.rs  index_db.rs  input.rs  lib.rs  main.rs  url_state.rs
