[package]
name = "client"
version = "0.1.0"
authors = ["johnny-smitherson <127537716+johnny-smitherson@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
ciborium = "0.2.2"
dioxus = { version = "0.6.0-rc.0", features = ["router", "fullstack"] }
dioxus-logger = { version = "0.5.1" }
dioxus-html = { version = "0.6.0-rc.0", features = ["serialize"]}


serde = "1.0.215"
dioxus-sdk = {git = "https://github.com/DioxusLabs/sdk", branch = "feat/dioxus-0.6", features = ["timing", "storage"]}
reqwest = "0.12.9"
futures-util = "0.3.31"
tokio = "1.42.0"
futures = "0.3.31"
anyhow = "1.0.94"
web-time = "1.1.0"
async-std = "1.13.0"
async-channel = "2.3.1"
# async-broadcast = "0.7.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
# server = ["dioxus/server"]
